--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -137,18 +137,18 @@
       <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
 
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
-      <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li>
-      <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li>
+      {% comment %} <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li> {% endcomment %}
+      {% comment %} <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li> {% endcomment %}
       <li><a href="{% url 'monthly_detaild_report_ezami' %}">سرانه تولید</a></li>
-      <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
+      {% comment %} <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li> {% endcomment %}
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
-      <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li>
-      <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
-      <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
+      {% comment %} <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li> {% endcomment %}
+      {% comment %} <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف {% endcomment %}
+      {% comment %} <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف {% endcomment %}
       </a></li>
       <li><a href="{% url 'monthly_zayeat_detaild_report' %}">آمار ضایعات ماهانه
       </a></li>
-      <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li>
+      {% comment %} <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li> {% endcomment %}
 
 
 
