--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq.html
@@ -94,7 +94,7 @@
                
             </div>
             <div class="card-body" >
-                <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
+                <h6 class="mb-3 font-size-11 text-uppercase">کامنت</h6>
                 <div class="d-flex">
                     <div>
                         <figure class="avatar avatar-sm mr-3">
