--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -3,6 +3,7 @@
 {% block stylesheet %}
      <!-- Select2 -->
      <link rel="stylesheet" href="{% static 'vendors/select2/css/select2.min.css' %}" type="text/css">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tributejs@5.1.3/dist/tribute.css">
 
 {% endblock %}
 {% block content %}
@@ -331,6 +332,7 @@
 <script src="{% static 'project/purchase.js' %}"></script>
 
 <script src="{% static 'project/purchaselist.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/tributejs@5.1.3/dist/tribute.min.js"></script>
 
 
 
