--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
@@ -87,7 +87,7 @@
                
             </div>
             <div class="card-body" >
-                <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
+                <h6 class="mb-3 font-size-11 text-uppercase">کامنت</h6>
                 <div class="d-flex">
                     <div>
                         <figure class="avatar avatar-sm mr-3">
@@ -103,6 +103,7 @@
                         </button>
                     </div>
                 </div>
+               
             </div>
         
         
@@ -184,3 +185,35 @@
         </div>
       </div>
 </div>
+<script>
+    // Dummy users list
+    $(document).ready(function () {
+        // Dummy users list
+        let users1000 = [
+            { key: "arzande", value: "arzande" },
+            { key: "ezami", value: "ezami" },
+
+            { key: "torabi", value: "torabi" },
+            { key: "abedi", value: "abedi" },
+            
+        ];
+
+        // Initialize Tribute.js
+        let tribute = new Tribute({
+            trigger: "@",
+            values: users1000,
+            selectTemplate: function (item) {
+                return "@" + item.original.key; // Inserts @username into text
+            }
+        });
+
+        // Attach Tribute.js to the textarea using jQuery
+        let commentBox = $("#comment-text");
+        if (commentBox.length) {
+            tribute.attach(commentBox[0]); // Access the raw DOM element from jQuery object
+        } else {
+            console.error("Comment box not found!");
+        }
+    });
+</script>
+</script>
