--- a/tiny_mrp/mrp/templates/mrp/temp2.html
+++ b/tiny_mrp/mrp/templates/mrp/temp2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="-dZspzPktrETvN6LO-9CzOnLz6ATGKqTJ0DmpuVGSYA" />
     <title>سیستم مدیریت درخواست دایانا</title>
 
     <!-- Favicon -->
