--- a/tiny_mrp/mrp/templates/mrp/purchase/calendar_Purchase_main.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/calendar_Purchase_main.html
@@ -62,6 +62,11 @@
                                     <i class="fa fa-circle text-secondary" data-icon="glass"></i> خریداری شده
                                 </div>
                             </a>
+                            <a href="?status=all">
+                                <div class="list-group-item fc-event">
+                                    <i class="fa fa-circle text-secondary" data-icon="glass"></i> همه
+                                </div>
+                            </a>
                         </div>
                     </div>
                     {% comment %} <div class="card-body">
