--- a/tiny_mrp/mrp/templates/mrp/purchase/calendar_Purchase_main.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/calendar_Purchase_main.html
@@ -26,8 +26,8 @@
                 </div>
                 <div>
                     <div class="card-body pb-3">
-                        <h6 class="mb-0">رویدادها</h6>
-                        <p class="small text-muted mb-0">رویداد را بکشید و در محل مورد نظر رها کنید</p>
+                        <h6 class="mb-0">وضعیت ها</h6>
+                        <p class="small text-muted mb-0">وضعیت مورد نظر را انتخاب نمایید</p>
                     </div>
                     <div>
                         <div class="list-group list-group-flush" id="external-events">
@@ -39,17 +39,17 @@
                             </a>
                            <a href="?status=Approved">
                             <div class="list-group-item fc-event">
-                                <i class="fa fa-circle text-danger" style="background-color:#53c797" data-icon="users"></i> تایید انبار
+                                <i class="fa fa-circle " style="color:#53c797" data-icon="users"></i> تایید انبار
                             </div>
                            </a>
                            <a href="?status=Approve2">
                             <div class="list-group-item fc-event">
-                                <i class="fa fa-circle text-danger" data-icon="users"></i> تایید مهندس اعزامی
+                                <i class="fa fa-circle " style="color:#f0ad4e" data-icon="users"></i> تایید مهندس اعزامی
                             </div>
                            </a>
                             <a href="?status=Approve3">
                                 <div class="list-group-item fc-event">
-                                    <i class="fa fa-circle text-warning" data-icon="diamond"></i> تایید مهندس ارزنده
+                                    <i class="fa fa-circle " style="color:#0275d8" data-icon="diamond"></i> تایید مهندس ارزنده
                                 </div>
                              </a>
                              <a href="?status=Ordered">
