--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -4,6 +4,16 @@
      <!-- Select2 -->
      <link rel="stylesheet" href="{% static 'vendors/select2/css/select2.min.css' %}" type="text/css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tributejs@5.1.3/dist/tribute.css">
+     <style>
+        .modal-backdrop {
+            z-index: 1040 !important; /* Lower z-index for backdrop */
+        }
+        
+        .modal {
+            z-index: 1050 !important; /* Higher z-index for modal */
+        }
+        
+     </style>
 
 {% endblock %}
 {% block content %}
