--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
@@ -92,6 +92,9 @@
             </div>
         </div>
      {% include 'mrp/purchase/purchase_v2.html' %}
+    <hr class="m-0">
+
+     {% include 'mrp/rfq/rfqList.html' %}
     
     </div>
     {% if perms.mrp.can_view_faktors and faktors %}
