--- a/tiny_mrp/mrp/templates/mrp/rfq/partialRFQForm.html
+++ b/tiny_mrp/mrp/templates/mrp/rfq/partialRFQForm.html
@@ -25,6 +25,13 @@
 
 
   </div>
+  <div class="form-group">
+
+    <label>توضیح</label>
+      {% render_field form.description  class='form-control' %}
+
+
+  </div>
 
 
 
