--- a/tiny_mrp/mrp/templates/mrp/rfq/rfqList.html
+++ b/tiny_mrp/mrp/templates/mrp/rfq/rfqList.html
@@ -4,6 +4,8 @@
 
         <div class="card">
             <div class="card-body">
+        <h6 class="mb-3 font-size-11 text-uppercase">استعلام</h6>
+
                 <h6 class="card-title"></h6>
                 <input type="hidden" id="companyId" name="companyId" value="491">
 
@@ -12,8 +14,8 @@
                         <thead>
                             <tr class="bg-dark">
                                 <th>نام کالا</th>
-                                <th>تعداد</th>
-                                <th>قسمت مورد مصرف</th>
+                                <th>تامین کننده</th>
+                                <th>قیمت</th>
                                 <th>شرح</th>
                                 
 
@@ -21,6 +23,7 @@
                             </tr>
                         </thead>
                         <tbody id="table-body">
+                        {% for i in rfqs %}
                             
                              
                             <tr data-id="689">
@@ -49,6 +52,11 @@
                                 
                                 
                             </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="4" class="text-center bg-info">استعلامی برای این درخواست وجود ندارد</td>
+                               </tr>
+                            {% endfor%}
                             
                             
                         </tbody>
